# easymodel_backend

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  nginx.conf  pyproject.toml
easymodelbackend/: asgi.py  settings.py  urls.py  wsgi.py
uploads/: models.py  urls.py  utils.py  views.py
uploads/migrations/: 0001_initial.py
