[tool.poetry]
name = "easymodelbackend"
version = "0.1.0"
description = ""
authors = ["neimali <gaoyinghan1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-storages = "^1.14.4"
django-redis = "^5.4.0"
django-cors-headers = "^4.6.0"
boto3 = "^1.36.3"
botocore = "^1.36.3"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"
djangorestframework-simplejwt = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
